[tool.poetry]
name = "sockets-lab"
version = "0.1.0"
description = ""
authors = ["antos07 <trotsenko.ant07@gmail.com>"]
readme = "README.md"
packages = [{include = "sockets_lab"}]

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
